remove duplicate selector and fix spell

--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
         margin: 2px;
       }
 
-      .btn {
-        background-color: green; /* duplicate selector, overrides above */
-      }
-
       #header {
-        font-weigth: bold; /* typo: should be font-weight */
+        font-weight: bold; /* typo: should be font-weight */
       }
     </style>
   </head>
