remove comment and add alt

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       }
 
       #header {
-        font-weight: bold; /* typo: should be font-weight */
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
     <h1 id="header">Welcome To My Website</h1>
     <p>This is <b>really</b> cool site</p>
-    <img src="notfound.jpg" />
+    <img src="notfound.jpg" alt="not found image" />
 
     <button class="btn" onclick="doSomething()">Click Me!</button>
 
